; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mrsas/extr_mrsas.c_mrsas_fire_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mrsas/extr_mrsas.c_mrsas_fire_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrsas_softc = type { i64 }

@mrsas_reg_set = common dso_local global i32 0, align 4
@inbound_single_queue_port = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrsas_fire_cmd(%struct.mrsas_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mrsas_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mrsas_softc* %0, %struct.mrsas_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mrsas_softc*, %struct.mrsas_softc** %4, align 8
  %8 = getelementptr inbounds %struct.mrsas_softc, %struct.mrsas_softc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %3
  %12 = load %struct.mrsas_softc*, %struct.mrsas_softc** %4, align 8
  %13 = load i32, i32* @mrsas_reg_set, align 4
  %14 = load i32, i32* @inbound_single_queue_port, align 4
  %15 = call i32 @offsetof(i32 %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @mrsas_write_reg(%struct.mrsas_softc* %12, i32 %15, i32 %16)
  br label %23

18:                                               ; preds = %3
  %19 = load %struct.mrsas_softc*, %struct.mrsas_softc** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @mrsas_write_64bit_req_desc(%struct.mrsas_softc* %19, i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %18, %11
  ret void
}

declare dso_local i32 @mrsas_write_reg(%struct.mrsas_softc*, i32, i32) #1

declare dso_local i32 @offsetof(i32, i32) #1

declare dso_local i32 @mrsas_write_64bit_req_desc(%struct.mrsas_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
